deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: packbuilder-deployment
  namespace: packbuilder
  labels:
    app: packbuilder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: packbuilder
  template:
    metadata:
      labels:
        app: packbuilder
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: packbuilder
          image: ghcr.io/packbuilder/goob-hub/packbuilder:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey-deployment
  namespace: packbuilder
  labels:
    app: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:7
          ports:
            - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: packbuilder
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: valkey-service
  namespace: packbuilder
spec:
  selector:
    app: valkey
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: packbuilder-api
  namespace: packbuilder
spec:
  type: ClusterIP
  selector:
    app: packbuilder
  ports:
    - port: 3030
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: packbuilder
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: packbuilder-ingress
  namespace: packbuilder
spec:
  rules:
    - host: packbuilder.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

    - host: api.packbuilder.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: packbuilder-api
                port:
                  number: 3030
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: packbuilder
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/packbuilder/goob-hub/packbuilder-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: packbuilder
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
